noinst_LTLIBRARIES = libcovf.la
libcovf_la_SOURCES = CovarianceFunction.cpp \
                     ConstantCF.cpp \
                     StationaryCF.cpp \
                     GaussianCF.cpp \
                     WhiteNoiseCF.cpp \
                     ExponentialCF.cpp \
                     Matern3CF.cpp \
                     Matern5CF.cpp \
                     NeuralNetCF.cpp \
                     SumCF.cpp
libcovf_la_CPPFLAGS = -I$(top_srcdir)/src

